# raylib-slojam

./: CMakeLists.txt  README.md
etc/: template.html
src/: main.cpp
src/collision/: collider.cpp  collider.h
src/core/: input.cpp  input.h  resource.cpp  resource.h  window.cpp  window.h
src/game/: scene.cpp  scene.h
src/gfx/: sprite.cpp  sprite.h  texture.cpp  texture.h  transform.cpp  transform.h
src/scene/: game.cpp  game.h  restart.cpp  restart.h  title.cpp  title.h  types.h
